--- a/TicketManagementSystem_Capstone/TicketManagementSystem_Capstone.csproj
+++ b/TicketManagementSystem_Capstone/TicketManagementSystem_Capstone.csproj
@@ -8,4 +8,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Database\" />
+    <Folder Include="ViewModel\" />
+  </ItemGroup>
+
 </Project>
