fixed location problems

--- a/TicketManagementSystem_Capstone/TicketManagementSystem_Capstone.csproj
+++ b/TicketManagementSystem_Capstone/TicketManagementSystem_Capstone.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <Folder Include="Database\" />
-    <Folder Include="ViewModel\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 
   <ItemGroup>
