--- a/TicketManagementSystem_Capstone/TicketManagementSystem_Capstone.csproj
+++ b/TicketManagementSystem_Capstone/TicketManagementSystem_Capstone.csproj
@@ -6,7 +6,14 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+	  <GenerateProgramFile>false</GenerateProgramFile>
+	  <StartupObject>TicketManagementSystem_Capstone.App</StartupObject>    
   </PropertyGroup>
+
+  <ItemGroup>
+    <ApplicationDefinition Remove="App.xaml" />
+    <Page Include="App.xaml"/>
+  </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Database\" />
