--- a/TicketManagementSystem_Capstone/TicketManagementSystem_Capstone.csproj
+++ b/TicketManagementSystem_Capstone/TicketManagementSystem_Capstone.csproj
@@ -25,6 +25,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="MSTest.TestFramework" Version="3.4.3" />
   </ItemGroup>
 
   <ItemGroup>
